--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PN'
 - !lcsh 'Love'
+- GITenberg
 title: Hints for Lovers
 url: http://www.gutenberg.org/ebooks/14255
